# swagger.yaml
@@ -34,6 +34,8 @@ paths:
               $ref: "#/definitions/Band"
         "404":
           description: "Bands cannot find"
+        "500":
+          description: "Internal Server"
   /bands/{id}:
     get:
       tags:
@@ -59,6 +61,8 @@ paths:
           description: "Bad Request"
         "404":
           description: "Band Id cannot find"
+        "500":
+          description: "Internal Error"
   /newBand:
     post:
       tags:
@@ -80,6 +84,10 @@ paths:
       responses:
         "200":
           description: ""
+          schema:
+            $ref: "#/definitions/Band"
+        "500":
+          description: "Internal Error"
 definitions:
   Band:
     type: "object"
